# video-dedup

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARK.md  DESIGN.md  original-plan.md  validation-results.md
scripts/: check_no_explicit.py
tests/: conftest.py  test_descriptors.py  test_embed.py  test_eval.py  test_fullref.py  test_incremental.py  test_ingest.py  test_offset.py  test_pipeline.py  test_quality.py  test_skyline.py  test_timeline.py
tests/fixtures/: make_fixtures.py
vdedup/: __init__.py  __main__.py  cli.py  config.py  eval.py  features.py  lid.py  pipeline.py  remote.py
vdedup/actions/: __init__.py  html_report.py  quarantine.py  report.py  schedule.py  triage.py
vdedup/align/: __init__.py  offset.py  verify.py
vdedup/catalog/: __init__.py  cache.py  db.py
vdedup/cluster/: __init__.py  graph.py  timeline.py
vdedup/decide/: __init__.py  segment.py  skyline.py
vdedup/descriptors/: __init__.py  audio_fp.py  embed.py  frames.py  phash.py
vdedup/index/: __init__.py  audio.py  candidates.py  visual.py
vdedup/ingest/: __init__.py  content_id.py  ingest.py  probe.py
vdedup/media/: __init__.py  deletterbox.py  ffmpeg.py
vdedup/quality/: __init__.py  audio_nr.py  fullref.py  score.py  video_nr.py  vqa.py
